--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,14 @@
 
   <link href="build/main.css" rel="stylesheet">
 
+  <script src="https://www.gstatic.com/charts/loader.js"></script>
+<script>  
+    // !important: You want to give this variable(var googleLoaded = false;). This is used to run multiple chart in your jade.
+    var googleLoaded = false;
+    // !important: Define which chart packages to preload.Because this package uses ChartWrappers you can use any chart type that Google supports, but if it // isn't loaded it will load it on demand. 
+    var googleChartsPackagesToLoad = ['geochart'];
+</script>
+
 </head>
 <body>
 
